--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
       I like teaching both pure and applied Mathematics. So far I've been serving as teaching assistant for theses courses:<br><br>
 
       <b>Winter term 21:</b>&nbsp;<a href="TopologieWS21/topologiews21.html">Topology</a> <br>
-      <b>Summer term 21:</b>&nbsp;<a href="Ana2Ing_SoSe2021/ana2ing.html">Analysis II for Engineers</a> <br>
-      <b>Winter term 20/21:</b>&nbsp;<a href="DG2_WiSe2020/dg2.html">Discrete Geometry II</a> <br>
+      <b>Summer term 21:</b>&nbsp;Analysis II for Engineers <br>
+      <b>Winter term 20/21:</b>&nbsp;Discrete Geometry II <br>
       <b>Summer term 20:</b>&nbsp;&nbsp; Discrete Geometry I <br>
-      <b>Winter term 19/20:</b> <a href="TopologieWs19\topologiews19.html">Topology</a> <br>
+      <b>Winter term 19/20:</b> Topology <br>
       <b>Summer term 19:</b>&nbsp;&nbsp; Computer-oriented Mathematics II <br>
       <b>Winter term 18/19:</b> Computer-oriented Mathematics I <br>
       <b>Summer term 18:</b>&nbsp;&nbsp;  Algorithmic Discrete Mathematics II <br>
