add new article

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <h3 id="publications">Preprints & Publications</h3>
         <ul>
-            <li> In preparation: "The MST-Fan of a regular subdivision".
+            <li> "The MST-fan of a regular subdivision". 2022. Preprint. <a href="https://arxiv.org/abs/2205.10424">arXiv: 2205.10424</a>.
             <li> (with <a href="https://sites.google.com/view/taylorbrysiewicz/home">Taylor Brysiewicz</a> and <a href="https://personal-homepages.mis.mpg.de/kuhne/">Lukas Kuehne</a>)."Enumerating chambers of hyperplane arrangements with symmetry". 2021. Preprint, <a href="https://arxiv.org/abs/2105.14542">arXiv: 2105.14542</a>.
             <li> (with <a href="http://page.math.tu-berlin.de/~joswig/">Michael Joswig</a>, Lisa Lamberti, and <a href="https://carnegiescience.edu/scientist/william-ludington">William B. Ludington</a>). “Higher-order interactions in fitness landscapes are sparse". 2020. Preprint, <a href="https://arxiv.org/abs/2009.12277">arXiv: 2009.12277</a>.
             <li> (with <a href="http://page.math.tu-berlin.de/~joswig/">Michael Joswig</a>, Lisa Lamberti, and <a href="https://carnegiescience.edu/scientist/william-ludington">William B. Ludington</a>). “Cluster partitions and fitness landscapes of the Drosophila fly microbiome”. 2019. J. Math. Biology. <a href="https://link.springer.com/article/10.1007%2Fs00285-019-01381-0">doi: 10.1007/s00285-019-01381-0</a>.
