--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
          <h3 id="software">Software</h3>
 
          <ul>
+            <li> MST-fan code: <a href="code/MSTcode.tar">MSTcode.tar</a>.
+            </li>
              <li>polymake extension: <a href="https://github.com/holgereble/EpistaticFiltration">EpistaticFiltration</a> <br>
                 This is the software companion to the article:
                Holger Eble, Michael Joswig, Lisa Lamberti, and William B. Ludington,
